[metadata]
name = ackvim
version = v0.7.5
description = ackvim seaches with ack and edits with vim
url = https://github.com/jalanb/ackvim
license = MIT License
author = jalanb
author_email = github@al-got-rhythm.net
platforms = any
classifiers =
    Programming Language :: Python :: 3.8
    Development Status :: 4 - Beta
    Natural Language :: English
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
description-file = README.md

[flake8]
# E731 - don't use lambdas
ignore = E731
